[package]
name = "dragontail"
version = "0.1.0"
authors = ["wataru-script"]
description = "dress up tail command"
repository = "https://github.com/wataru-script/dragontail"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.4"
memmap = "0.7.0"
termcolor = "1.0.5"
itertools = "0.8"
clap = "2.33.0"
